# glfw3-opengl-imgui-cpp-template-project

./: CMakeLists.txt  README.md  conanfile.txt  configure_dev.bash  configure_rel.bash
.github/workflows/: ci.yml
config/: config.hpp.in
include/: CMakeLists.txt
include/hello_world/: CMakeLists.txt  hello_world.hpp
res/: CMakeLists.txt
shaders/: CMakeLists.txt
src/: CMakeLists.txt  Shader.cpp  main.cpp
src/hello_world/: CMakeLists.txt  hello_world.cpp
test/: CMakeLists.txt
test/hello_world/: CMakeLists.txt  hello_world_test.cpp
